crates/courier-ftp-proto/tests/snapshots/golden__rotate_commit.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "action": "commit",
  "wrapped_keys": [
    {
      "user": "01900000-0000-7000-8000-000000000001",
      "wrapped": "VVVVVVVVVVU",
      "signature": "ZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZg"
    }
  ]
}
