crates/courier-ftp-proto/tests/snapshots/golden__rotate_response.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "key_version": 2,
  "new_key_version": 3,
  "head_revision": 7,
  "staged": 12,
  "resumed": true,
  "replaced_abandoned": false
}
