crates/courier-ftp-proto/tests/snapshots/golden__rotate_upload.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "action": "upload",
  "items": [
    {
      "id": "01900000-0000-7000-8000-000000000020",
      "envelope": "-_8"
    }
  ]
}
