crates/courier-ftp-proto/tests/snapshots/golden__ws_client.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
[
  {
    "type": "auth",
    "token": "access"
  },
  {
    "type": "ping"
  },
  {
    "type": "pong"
  }
]
